FEAT: update password and authorization
